Fix overlap of tile details box and map

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,6 +63,7 @@ a {
   position: absolute;
   right: 10px;
   bottom: 10px;
+  z-index: 100;
   width: 150px;
   background-color: gray;
   margin: 10px;
